--- a/src/app/slider/slider.html
+++ b/src/app/slider/slider.html
@@ -2,11 +2,11 @@
   id="mainCarousel"
   class="carousel slide carousel-fade"
   data-ride="carousel"
-  data-interval="3000"
+  data-interval="2500"
 >
   <!-- Indicators -->
   <ol class="carousel-indicators">
-    <li data-target="#mainCarousel" data-slide-to="0" class="active"></li>
+    <li data-target="#mainCarousel" data-slide-to="0"></li>
     <li data-target="#mainCarousel" data-slide-to="1"></li>
     <li data-target="#mainCarousel" data-slide-to="2"></li>
   </ol>
