--- a/src/app/navbar/navbar.html
+++ b/src/app/navbar/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container">
-    <a class="navbar-brand font-weight-bold" href="#">Beauty Store</a>
+    <a class="navbar-brand font-weight-bold" routerLink="">Beauty Store</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -15,13 +15,16 @@
     <div class="collapse navbar-collapse" id="navbarMain">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link active" href="#">Home</a>
+          <a class="nav-link active" routerLink="">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="#">Man</a>
+          <a class="nav-link active" routerLink="product">Product</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="#">Woman</a>
+          <a class="nav-link active" routerLink="contact">Contact</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link active" routerLink="about">About</a>
         </li>
       </ul>
       <form class="form-inline my-3 my-lg-0 d-flex align-items-center">
@@ -34,13 +37,16 @@
         <button class="btn btn-outline-success mr-2" type="submit">
           <i class="fas fa-search mr-1"></i> Search
         </button>
-        <button
+        <a routerLink="cart" class="btn btn-outline-success" type="button"
+          >Cart</a
+        >
+        <!-- <button
           class="btn btn-outline-success"
           type="button"
           (click)="openCart()"
         >
-          <i class="fas fa-shopping-cart mr-1"></i> Cart
-        </button>
+          <i class="fas fa-shopping-cart mr-1"></i>
+        </button> -->
       </form>
     </div>
   </div>
