--- a/src/app/home/home.html
+++ b/src/app/home/home.html
@@ -1,6 +1,9 @@
+<!-- slider -->
 <div class="container-fluid p-0 m-0">
   <app-slider></app-slider>
 </div>
+
+<!-- Product cart => Product -->
 <div class="container-fluid p-0 m-0">
   <app-product></app-product>
 </div>
