--- a/src/app/about/about.html
+++ b/src/app/about/about.html
@@ -14,24 +14,17 @@
           <strong>Phnom Penh, Cambodia</strong>
         </p>
         <div class="mt-4">
-          <a href="#contact" class="btn btn-primary me-2">Get in touch</a>
-          <a href="#team" class="btn btn-outline-primary">Meet the team</a>
+          <a href="#contact" class="btn btn-primary me-2 m-2">Get in touch</a>
+          <a href="#team" class="btn btn-outline-primary m-2">Meet the team</a>
         </div>
       </div>
       <div class="col-lg-6 text-center d-none d-lg-block">
         <!-- Simple SVG illustration as placeholder -->
-        <svg
-          width="320"
-          height="220"
-          viewBox="0 0 320 220"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <rect width="320" height="220" rx="12" fill="#f8fafc" />
-          <circle cx="96" cy="96" r="56" fill="#e7f1ff" />
-          <rect x="176" y="48" width="112" height="24" rx="6" fill="#e7f1ff" />
-          <rect x="176" y="88" width="112" height="16" rx="6" fill="#f1f5f9" />
-        </svg>
+        <img
+          src="https://imgs.search.brave.com/sme2v6Ny5NuZwNIHGy4k4yTFxoANU8XnzsGKLtsv5Yo/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9jZG4y/Lmljb25maW5kZXIu/Y29tL2RhdGEvaWNv/bnMvYXZhdGFycy02/MC81OTg1LzQtV3Jp/dGVyLTY0LnBuZw"
+          alt="avatar"
+          class="team-avatar h-75 w-75"
+        />
       </div>
     </div>
   </div>
@@ -86,10 +79,11 @@
       <div class="col-sm-6 col-md-4">
         <div class="d-flex gap-3 align-items-start">
           <img
-            src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='160' height='160'><rect width='100%' height='100%' fill='%23ddd'/></svg>"
+            src="https://imgs.search.brave.com/sme2v6Ny5NuZwNIHGy4k4yTFxoANU8XnzsGKLtsv5Yo/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9jZG4y/Lmljb25maW5kZXIu/Y29tL2RhdGEvaWNv/bnMvYXZhdGFycy02/MC81OTg1LzQtV3Jp/dGVyLTY0LnBuZw"
             alt="avatar"
             class="team-avatar"
           />
+
           <div>
             <h6 class="mb-0">Kimhong Rin</h6>
             <small class="text-muted">Founder & Developer</small>
@@ -102,7 +96,7 @@
       <div class="col-sm-6 col-md-4">
         <div class="d-flex gap-3 align-items-start">
           <img
-            src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='160' height='160'><rect width='100%' height='100%' fill='%23ddd'/></svg>"
+            src="https://imgs.search.brave.com/HfjXssVbF-HD8fhVtb_BfyH9ICT2WWZrzd5ccIy7Uso/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pbWcu/ZnJlZXBpay5jb20v/ZnJlZS12ZWN0b3Iv/eW91bmctbWFuLXdp/dGgtZ2xhc3Nlcy1p/bGx1c3RyYXRpb25f/MTMwOC0xNzQ3MDYu/anBnP3NlbXQ9YWlz/X2h5YnJpZCZ3PTc0/MCZxPTgw"
             alt="avatar"
             class="team-avatar"
           />
@@ -116,7 +110,7 @@
       <div class="col-sm-6 col-md-4">
         <div class="d-flex gap-3 align-items-start">
           <img
-            src="data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='160' height='160'><rect width='100%' height='100%' fill='%23ddd'/></svg>"
+            src="https://imgs.search.brave.com/oG3VyvJYPBQFjHbrlbpsrXSSBwY5gh0AYwThwPZTLdA/rs:fit:860:0:0:0/g:ce/aHR0cHM6Ly9pLnBp/bmltZy5jb20vb3Jp/Z2luYWxzLzI0LzIz/Lzk4LzI0MjM5ODY2/Yzg0OTUxNTg2NjRi/OWQyZjM4NWMxYzM5/LmpwZw"
             alt="avatar"
             class="team-avatar"
           />
