--- a/src/app/pop-product/pop-product.html
+++ b/src/app/pop-product/pop-product.html
@@ -19,7 +19,7 @@
             <th scope="row">{{ i + 1 }}</th>
             <td>{{ item.title || "N/A" }}</td>
             <td>{{ item.price || "N/A" }}</td>
-            <td>{{ item.quantity | number }}</td>
+            <td>{{ item.quantity || 1 }}</td>
             <td>
               <img
                 [src]="item.thumbnail || (item.images?.[0])"
